# Cel-Shader

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGLEW.cmake
include/: CelShader.h  MiscGL.h  RawMeshLoader.h  VectorN.h
shaders/: celShader.frag  celShader.vs
src/: CMakeLists.txt  CelShader.cpp  MiscGL.cpp  RawMeshLoader.cpp  VectorN.cpp  main.cpp
